public/painting-app/css/style.css
* {
    box-sizing:border-box;
}
body {
    background-color: #eeeeee75;
    max-height:100vh;
    width:100%;
}
.first_section {
    padding-left:42px;

}

/*.nav-tabs li a {*/
    /*border: 1px solid !important;*/
    /*border-bottom-left-radius: 12px;*/
    /*border-top-right-radius: 12px !important;*/
/*}*/
.hei-1 {
    height:205px;
}
.hei-2 {
    height:150px;
    background-color:white;
}
.font {
    font-size: 9px;
    font-weight: bold;
    font-style: italic;
}

.canvas-wrapper, .session-canvas-wrapper {
    overflow: auto;
    height: 370px;
    border: 2px solid #e8e8e8;
    position: relative;
    background: #fff;
}
.drawing-board{background:#fff;}
.session-canvas{background: #fff;}
.canvas-text-input{
    border:none;
    padding: 0px;
    margin:0;
    opacity: 0;
    border-radius: 0px;
    background: none;
    position: absolute;
    top: 0;
    left: 0;
    outline: none;
    white-space: pre-wrap;
    height: auto;
}
.option-menu-wrapper,.science-menu-wrapper{position: relative;}
.option-menu {
    position: absolute;
    width: 100px;
    list-style: none;
    padding: 5px;
    background: lightyellow;
    border: 1px solid #ccc;
    margin: 0;
    left: 100%;
    top: 0;
    z-index: 9999;
}
#paste-tool.active{
    background:#0f9d58;
}
.option-menu li a {
    display: block;
    margin-bottom: 10px;
    padding:3px 0;
}
.option-menu li a span{border-bottom:solid #000;display: block; }
.option-menu li a:hover,.option-menu li a.active {
    box-shadow: 0px 0px 1px 1px #0c0cc0d9;
}
.ui-slider-handle{
    text-align: center;
    line-height: normal;
    font-size: 10px;
    border-radius: 100%!important;
    top: -2px;
    outline: none!important;
    border:#007fff!important;
    background:#007fff!important;
    color:#fff!important;
}
.ui-slider-handle.ui-state-active{outline:none!important;border:#007fff!important;}
.ui-widget.ui-widget-content{height:4px;}
.ui-slider-horizontal .ui-slider-handle {
    top: -7px;
    height: 15px;
    width: 15px;
    line-height: 15px;
}
.eraser-slider{top:10px;}
.font-menu{width: 500px;text-align: left;padding:10px 15px 0px 15px;}
.font-menu h4{font-size:16px;}
.font-menu h5{font-size:14px;margin-bottom:0;}
.font-menu ul{list-style: none;padding:5px;background:#fff;height:150px;overflow-y: auto;}
.font-menu ul li a{margin-bottom:3px;color:#000;padding:2px;font-size:12px;text-decoration: none!important;}

.font-wrapper{background:#BDBDBD;padding:10px 15px;}
.demo-font-text {
    padding: 5px 10px;
    text-align: center;
    background: #fff;
    margin-bottom: 10px;
}

.color-menu{width:300px;}
.color-pallet{list-style: none;padding:0;margin:0;}
.color-pallet li a{display: inline-block;width: 25px;height: 25px;border:1px solid #000;border-radius:100%;margin-bottom:3px;}
.fake-canvas{position:absolute;top:0;left:0;display: none;background:transparent;z-index:9;}
.canvas-writing.full-screen{
    position:fixed;
    top:0;
    bottom:0;
    right:0;
    left:0;
    background:#fff;
    z-index: 99;
}

#symbol-modal .modal-dialog{max-width: 800px;width: 800px;}
#symbol-modal .modal-header{padding:0;}
#symbol-modal h4{font-size:14px;margin:0;padding:10px 15px;}
#symbol-modal .modal-footer{padding:5px 15px;}
#symbol-modal .modal-body{background:#ccc;}
.f-50 {
    font-size: 50px;
    display: block;
    line-height: 60px;
    margin-top: -10px;
}
.f-32{font-size:32px;font-family: "Times New Roman";}
.symbol-menu  li{display:inline-block;vertical-align:middle;width:60px;}
.symbol-menu  li a{text-decoration: none!important;color:#5d5d5d;}
.function-menu {
    width: 370px;
    padding-left: 30px;
    padding-right: 15px;
}
.misscelleneous-menu  li{width:80px;}
.misscelleneous-menu{
    width: 450px;
    padding-left: 30px;
    padding-right: 15px;
}

.eqEdEquation{
    width: 100%!important;
    height: 200px;
    padding: 20px;
    background: #fff;
    margin: 20px 0;
}
.menuItem{width: 40px!important;}
#simple-functions{padding-top:20px;}
#integralNoUpperNoLowerButton{height:60px;}
#integralButton{height:80px;margin-top:-10px;}
#limitButton{width: 60px!important;}
#logLowerButton{width: 80px!important;}
.tab-links a{padding:5px 10px;}
#tab-content-top{width:100%;}
.tab-links a{background:#9C9C9C;}
.outerTab.active a, .outerTab.active a:hover{background:#fff;}
#tab-content-top{background:#fff;}
.symbol-dropdown {
    width: 450px;
    bottom: 0;
    top: initial;
}
.symbol-dropdown li{float:left;margin-right:2px;}

.power-dropdown .x-value-sub, .power-dropdown .x-value-sup {
    display: inline-block;
    font-size: 30px;
    padding: 10px 30px 20px 5px;
}
.power-dropdown input{display: inline-block;width:40px;position: absolute;right:15px;}
.power-dropdown .y-value-sub{bottom:15px;}
.power-dropdown .x-value-sub{padding:5px 30px 30px 5px;}
#text-holder{position:absolute;left:0;top:0;width:auto;height:auto;min-width:50px;min-height:25px;outline:none!important;margin:0;padding:0;}
#text-holder p{margin:0;padding:0;line-height: normal;}

.shape-menu li{display: inline-block;}
.shape-menu{width: 160px;text-align:left;padding:3px 10px;}
.mx-auto img{max-width:100%;}

.tools-list {
    max-width: 4%;
    padding-right: 0;
    text-align: left;
    padding-left: 20px;
}
.tools-list .my-1{text-align: left!important;}
.graph-menu{width:50px;}



.btn-square.active{}
#cloud-modal h5, #print-modal h5 {
    margin: 0;
    font-size: 16px;
    font-weight: normal;
}

.modal .modal-header {
    padding: 5px 15px 15px 15px;
    background: #ffbe5e;
}
 .modal .modal-footer {
    background: #f1e8e8;
    padding:5px 5px 10px 5px;
    text-align: center;
}
#print-modal input[type="radio"]:not(:checked),#print-modal input[type="radio"]:checked {
     position: static;
     left: -9999px;
     opacity: 1;
    background:#fff;
}
/* ... */

